package com.school.schoolSystem.service;

import com.school.schoolSystem.dto.CoursePatchRequestDTO;
import com.school.schoolSystem.dto.CourseRequestDTO;
import com.school.schoolSystem.dto.CourseResponseDTO;
import com.school.schoolSystem.exception.CourseAlreadyExistsException;
import com.school.schoolSystem.exception.CourseNotFoundException;
import com.school.schoolSystem.exception.InvalidFieldValueException;
import com.school.schoolSystem.model.Course;
import com.school.schoolSystem.repository.CourseRepository;
import org.springframework.stereotype.Service;

import java.util.ArrayList;
import java.util.List;
import java.util.Optional;

@Service
public class CourseService {

    private CourseRepository repository;

    public CourseService(CourseRepository repo) {
        this.repository = repo;
    }

    public CourseResponseDTO createCourse(CourseRequestDTO courseRequest) {

        repository.findByTitle(courseRequest.getTitle())
                .ifPresent(c -> {
                    throw new CourseAlreadyExistsException(
                            "Course with title: " + courseRequest.getTitle() + " already exists"
                    );
                });

        int maxStudentsParsed;
        try {
            maxStudentsParsed = Integer.parseInt(courseRequest.getMaxStudents());
        } catch (NumberFormatException ex) {
            throw new InvalidFieldValueException("maxStudents must be a number");
        }

        Course course = Course.builder()
                .title(courseRequest.getTitle())
                .teacher(courseRequest.getTeacher())
                .maxStudents(maxStudentsParsed)
                .active(true)
                .build();

        Course saved = repository.save(course);

        return CourseResponseDTO.builder()
                .id(saved.getId())
                .title(saved.getTitle())
                .teacher(saved.getTeacher())
                .maxStudents(saved.getMaxStudents())
                .active(saved.isActive())
                .build();
    }

    public List<CourseResponseDTO> findAll() {
        List<Course> all = repository.findAll();
        List<CourseResponseDTO> response = new ArrayList<>();
        for (Course entity : all) {
            response.add(CourseResponseDTO.builder()
                    .id(entity.getId())
                    .title(entity.getTitle())
                    .teacher(entity.getTeacher())
                    .maxStudents(entity.getMaxStudents())
                    .active(entity.isActive())
                    .build());
        }
        return response;
    }

    public List<CourseResponseDTO> findAllActiveCourses() {
        List<Course> all = repository.findAll();
        List<CourseResponseDTO> response = new ArrayList<>();

        for (Course entity : all) {
            if (entity.isActive()) {
                response.add(CourseResponseDTO.builder()
                        .id(entity.getId())
                        .title(entity.getTitle())
                        .teacher(entity.getTeacher())
                        .maxStudents(entity.getMaxStudents())
                        .active(entity.isActive())
                        .build());
            }
        }
        return response;
    }

    public CourseResponseDTO findCourseById(Integer id) {
        Optional<Course> foundCourse = repository.findById(id);

        if (foundCourse.isEmpty()) {
            throw new CourseNotFoundException("Course with id: " + id + " does not exists");
        }

        return CourseResponseDTO.builder()
                .id(foundCourse.get().getId())
                .title(foundCourse.get().getTitle())
                .teacher(foundCourse.get().getTeacher())
                .maxStudents(foundCourse.get().getMaxStudents())
                .active(foundCourse.get().isActive())
                .build();
    }


    public boolean deleteCourseById(Integer id) {
        /*todo*/
        Optional<Course> foundCourse = repository.findById(id); //
        if (foundCourse.isEmpty()) {
            throw new CourseNotFoundException("Course with id: " + id + " does not exists");
        } else if (!foundCourse.get().isActive()) {
            throw new CourseAlreadyExistsException("Course with id: " + id + " has been already removed from db");
        }
        foundCourse.get().setActive(false);
        repository.save(foundCourse.get());
        return !foundCourse.get().isActive();
    }

    public List<CourseResponseDTO> findCoursesByTitle(String title) {

        List<Course> foundCourses = repository.findAllByTitle(title.toLowerCase());
        if (foundCourses.isEmpty()) {
            throw new CourseNotFoundException("No course with title: " + title.toLowerCase() + " found");
        }

        List<CourseResponseDTO> responseDTOS = foundCourses.stream()
                .filter(Course::isActive)
                .map(c -> courseResponseDTO(c))
                .toList();
        return responseDTOS;
    }

    public List<CourseResponseDTO> findCourseByTeacher(String teacher) {

        List<Course> foundCourses = repository.findAllByTeacher(teacher.toLowerCase());
        if (foundCourses.isEmpty()) {
            throw new CourseNotFoundException("No course found by teacher: " + teacher.toLowerCase());
        }

        List<CourseResponseDTO> responseDTOS = foundCourses.stream()
                .filter(Course::isActive)
                .map(c -> courseResponseDTO(c))
                .toList();
        return responseDTOS;
    }


    public CourseResponseDTO patchCourse(Integer id, CoursePatchRequestDTO requestDTO) {
        Optional<Course> courseToUpdate = repository.findById(id);
        if (courseToUpdate.isPresent()){
            Course course =courseToUpdate.get();
            if(requestDTO.getTitle() != null){
                course.setTitle(requestDTO.getTitle());
            }
            if(requestDTO.getTeacher() != null){
                course.setTeacher(requestDTO.getTeacher());
            }
            if(requestDTO.getMaxStudents() != null){
                course.setMaxStudents(Integer.parseInt(requestDTO.getMaxStudents()));
            }
            repository.save(course);
            return courseResponseDTO(course);

        }
        return null;

    }

    private CourseResponseDTO courseResponseDTO(Course course) {
        return CourseResponseDTO.builder()
                .id(course.getId())
                .title(course.getTitle())
                .teacher(course.getTeacher())
                .maxStudents(course.getMaxStudents())
                .active(course.isActive())
                .build();
    }

}
